// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> Render empty 1`] = `
<button
  className="button"
/>
`;

exports[`<Button> With className 1`] = `
<button
  className="button some-class"
>
  Some text
</button>
`;

exports[`<Button> With text 1`] = `
<button
  className="button"
>
  Some text
</button>
`;

exports[`<Button> With type 1`] = `
<button
  className="button"
  type="button"
>
  Some text
</button>
`;
